<resources>
    <string name="app_name">OSDroneDetect</string>
    <string name="tab_text_1">Scanning Controls</string>
    <string name="tab_text_2">Map</string>
    <string name="tab_text_3">Log</string>
    <string name="stop_scanning">Stop Scanning</string>
    <string name="start_scanning">Start Scanning</string>
    <string name="replace_text">REPLACE TEXT</string>
    <string name="ssid">SSID:</string>
    <string name="bssid">BSSID:</string>
    <string name="rssi">RSSI (dBm):</string>
    <string name="freq">FREQ (MHz):</string>
    <string name="time">TIMESTAMP:</string>
    <string name="range">FSPL RANGE (m):</string>
</resources>